💡出力先フォルダを変更

--- a/src/Pluggy/Pluggy.csproj
+++ b/src/Pluggy/Pluggy.csproj
@@ -16,6 +16,14 @@
     <PackageProjectUrl>https://github.com/tatsuya-midorikawa/Pluggy</PackageProjectUrl>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net45|AnyCPU'">
+    <OutputPath>../build/release</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net45|AnyCPU'">
+    <OutputPath>../build/debug</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Reffy" Version="1.0.1" />
   </ItemGroup>
